# human-agent-playground

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.ai-bridge  Dockerfile.backend  Dockerfile.dev  Dockerfile.server  Dockerfile.web  README.md  README.zh-CN.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy-website.yml
apps/ai-bridge/: Cargo.toml
apps/ai-bridge/src/: catalog.rs  decide.rs  main.rs  types.rs
apps/backend/: Cargo.toml
apps/backend/src/: main.rs  mcp.rs
apps/server/: package.json
apps/server/src/: ai-runtime-client.ts  app.ts  game-registry.ts  game-service.ts  http-client.ts  index.ts  mcp.ts
apps/server/src/__tests__/: game-registry.test.ts  game-service.test.ts  mcp-streamable-http.test.ts  session-stream.test.ts
apps/server/src/games/: chess-adapter.ts  connect-four-adapter.ts  gomoku-adapter.ts  othello-adapter.ts  xiangqi-adapter.ts
apps/server/src/mcp/: create-mcp-server.ts  register-chess-tools.ts  register-connect-four-tools.ts  register-gomoku-tools.ts  register-othello-tools.ts  register-platform-tools.ts  register-xiangqi-tools.ts  tool-catalog.ts
apps/web/: index.html  package.json  tsconfig.app.json
apps/web/src/: App.css  App.tsx  ai-runtime-ui.tsx  api.ts  game-registry.ts  i18n.tsx  index.css  types.ts
apps/web/src/__tests__/: App.test.tsx  api.test.ts  game-registry.test.ts
apps/web/src/games/: types.ts
apps/web/src/games/chess/: ChessWorkspace.tsx  api.ts  index.ts
apps/web/src/games/chess/__tests__/: ChessWorkspace.test.tsx
apps/web/src/games/chess/components/: ChessBoard.tsx
apps/web/src/games/connect-four/: ConnectFourWorkspace.tsx  api.ts  index.ts
apps/web/src/games/gomoku/: GomokuWorkspace.tsx  api.ts  index.ts
apps/web/src/games/othello/: OthelloWorkspace.tsx  api.ts  index.ts
apps/web/src/games/shared/: ActivityFeed.tsx  boardViewport.ts
apps/web/src/games/xiangqi/: XiangqiWorkspace.tsx  api.ts  index.ts
apps/web/src/test/: setup.ts
crates/hap-games/: Cargo.toml
crates/hap-games/src/: chess.rs  connect_four.rs  gomoku.rs  lib.rs  othello.rs  xiangqi.rs
crates/hap-models/: Cargo.toml
crates/hap-models/src/: lib.rs
crates/hap-runtime/: Cargo.toml
crates/hap-runtime/src/: ai.rs  catalog.rs  error.rs  lib.rs  service.rs
docker/: dev-entrypoint.sh  nginx-web.conf
docs/: ARCHITECTURE.md
e2e-tests/: package.json  playwright.config.ts
e2e-tests/tests/: playground.spec.ts
games/chess/: package.json  tsconfig.json
games/chess/src/: chess.ts  index.ts  types.ts
games/chess/src/__tests__/: chess.test.ts
games/connect-four/: package.json
games/connect-four/src/: connect-four.ts  index.ts  types.ts
games/connect-four/src/__tests__/: connect-four.test.ts
games/gomoku/: package.json
games/gomoku/src/: gomoku.ts  index.ts  types.ts
games/gomoku/src/__tests__/: gomoku.test.ts
games/othello/: package.json
games/othello/src/: index.ts  othello.ts  types.ts
games/othello/src/__tests__/: othello.test.ts
games/xiangqi/: README.md  package.json
games/xiangqi/src/: index.ts  types.ts  xiangqi.ts
games/xiangqi/src/__tests__/: xiangqi.test.ts
scripts/: dev.sh
skills/human-agent-playground-chess/: SKILL.md
skills/human-agent-playground-mcp/: SKILL.md
website/: astro.config.mjs  package.json  playwright.config.ts  vitest.config.ts
website/public/: CNAME
website/src/components/: DemoFrame.astro  StaticDemo.astro
website/src/content/: demo-session.ts  site-content.ts
website/src/content/__tests__/: demo-session.test.ts  site-content.test.ts
website/src/layouts/: BaseLayout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
website/tests/: homepage.spec.ts
(+15 files in other folders)
