[package]
name = "human-agent-playground-backend"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
hap-models = { path = "../../crates/hap-models" }
hap-runtime = { path = "../../crates/hap-runtime" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
